--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation 'com.tngtech.archunit:archunit:1.4.1'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.register('explodedJar', Copy) {
