--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -11,6 +11,9 @@ dependencies {
     testImplementation 'com.tngtech.archunit:archunit:1.4.1'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-validation' // si usas Bean Validation en otros DTOs
+    implementation 'org.springframework:spring-tx'
 }
 
 tasks.register('explodedJar', Copy) {
