feat(webflux): integrar Swagger para documentacion, uso de MapStruct y testUnitarios

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -36,3 +36,10 @@ adapters:
     schema: "public"
     username: "postgres"
     password: "admin"
+
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
