--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-validation' // si usas Bean Validation en otros DTOs
     implementation 'org.springframework:spring-tx'
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.11'
 }
 
 tasks.register('explodedJar', Copy) {
